front-end/src/app/dashboard/dashboard.component.scss
@import '../shared/scss/global';
.dashboard {
  background-color: $mercury;
  min-height: 85vh;
  position: relative;  
  .grid-row {
    margin-bottom: 5px;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    .grid-row__col {
      padding: 0;
    }
    .grid-col {
      background-color: $white;
      flex: 0 0 48%;
      max-width: 48%;      
      &:first-child {
        margin-right: 5px;
      }
    }
  }  
  a {
    color: $black;
    text-decoration: none;
    &:hover {
      text-decoration: underline;
    }
  } 
  section {
    .content {
      min-height: 85vh;
      position: relative;
      .grid-row {
        min-height: 350px;
        position: relative;
        .grid-row__col {
          background-color: $white;
          margin: 0 auto;
        }
      }
      .forms-table {
        width: 100%;
        tbody {
          tr {
            td {
              text-align: center;
              .btn-group {
                .btn {
                  margin-right: 5px;
                  &:last-child {
                    margin-right: 0;
                  }
                }
              }
            }
          }
        }
      }
    }
  }
  footer {
    .footer {
      bottom: 0;
      position: absolute;
      width: 100%;
      .legal-disclaimer {
        text-align: center;
        .btn {
          color: $black;
        }
      }
    }
  }  
} // .dashboard

